# compare_folders

./: .gitignore  Cargo.toml  README.md
src/: main.rs
