[package]
name = "compare_folders"
version = "1.0.0"
edition = "2021"

authors = ["Kendrick Grünberg"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.5", features = ["derive"] } # clap = Command Line Argument Parser for Rust
ring = "0.16.20" # crypto crate, for SHA256
data-encoding = "2.3.2" # hex endocing
ansi_term = "0.12" # colored console output
unicode-segmentation = "1.9.0" # proper substringing of Unicode Strings (colwidth)
